--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
 </head>
 
 <body>
-    <h1>Heading1</h1>
-    <h2>Heading2</h2>
-    <h3>Heading3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore aperiam molestias ipsum. Deleniti,
-        similique sunt animi vel, ipsa ipsam ducimus velit atque ratione dicta quo sequi accusamus quod quis, et
-        laudantium qui ut totam eum harum. Ipsum libero rem quibusdam adipisci eos veritatis sed rerum, minima, unde
-        neque quasi.</p>
+    <a href="#" src="" class="link-arrow">Learn More</a>
 </body>
 
 </html>
