--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    <a href="#" src="" class="link-arrow">Learn More</a>
+    <span class="badge badge--primary">10% OFF</span>
+    <span class="badge badge--secondary">20% OFF</span>
+    <span class="badge badge--secondary badge--small">10% OFF</span>
 </body>
 
 </html>
