--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
 </head>
 
 <body>
-    <span class="badge badge--primary">10% OFF</span>
-    <span class="badge badge--secondary">20% OFF</span>
-    <span class="badge badge--secondary badge--small">10% OFF</span>
+    <ul class="list list--tick">
+        <li class="list__items">item 1</li>
+        <li class="list__items">item 2</li>
+        <li class="list__items">item 3</li>
+    </ul>
+    <ul class="list list--inline">
+        <li class="list__items">item 1</li>
+        <li class="list__items">item 2</li>
+        <li class="list__items">item 3</li>
+    </ul>
 </body>
 
 </html>
