--- a/index.html
+++ b/index.html
@@ -14,16 +14,11 @@
 </head>
 
 <body>
-    <ul class="list list--tick">
-        <li class="list__items">item 1</li>
-        <li class="list__items">item 2</li>
-        <li class="list__items">item 3</li>
-    </ul>
-    <ul class="list list--inline">
-        <li class="list__items">item 1</li>
-        <li class="list__items">item 2</li>
-        <li class="list__items">item 3</li>
-    </ul>
+    <span class="icon-wrapper">
+        <svg class="icon icon--primary">
+            <use xlink:href="./images/sprite.svg#Wordpress"></use>
+        </svg>
+    </span>
 </body>
 
 </html>
