--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 </head>
 
 <body>
-    <span class="icon-wrapper">
-        <svg class="icon icon--primary">
-            <use xlink:href="./images/sprite.svg#Wordpress"></use>
-        </svg>
-    </span>
+    <button class="btn btn--secondary">get started</button>
+    <button class="btn btn--accent">get started</button>
+    <button class="btn btn--outline">buy now</button>
+
 </body>
 
 </html>
