--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 </head>
 
 <body>
-    <button class="btn btn--secondary">get started</button>
-    <button class="btn btn--accent">get started</button>
-    <button class="btn btn--outline">buy now</button>
+    <input type="text" placeholder="Enter your domain name here..." class="input">
 
 </body>
 
