created Media objects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 </head>
 
 <body>
-
+    <div class="media">
+        <div class="media__image">
+            <svg class="icon icon--primary">
+                <use xlink:href="./images/sprite.svg#snap"></use>
+            </svg>
+        </div>
+        <div class="media__body">
+            <h3>Easy Start & Managed Updates</h3>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Eaque odio tempore illo deleniti at natus laudantium sed adipisci et autem.</p>
+        </div>
+    </div>
 </body>
 
 </html>
